[package]
name = "embeded-ui"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["lib"]

[dependencies]
rgb = "0.8"


# Desktop window test display
winit = {version = "0.30", optional = true}
softbuffer = {version = "0.4", optional = true}

[features]
default = []
std = []
desktop = ["std", "dep:winit", "dep:softbuffer"]
